<resources>
    <string name="app_name">Book Stats</string>
    <string name="title_read_now">Read Now</string>
    <string name="title_read_yet">Read yet</string>
    <string name="title_want_read">Want read</string>

    <string name="book_name_title">Book</string>
    <string name="book_name_hint">Enter book name</string>
    <string name="book_author_title">Author</string>
    <string name="book_author_hint">Enter book author</string>
    <string name="book_pages_title">Pages</string>
    <string name="book_pages_hint">Enter number of book</string>
    <string name="book_category_title">Category</string>
    <string name="book_category_hint">Enter book category</string>
    <string name="book_status_title">Status:</string>
    <string name="book_label_title">Label</string>
    <string name="delete_book">Delete</string>
    <string name="book_start_date_title">Start date</string>

    <string name="book_activity_title">Custom book</string>
    <string name="date_picker_title">Book date</string>
    <string name="book_end_date_title">End date</string>
    <string name="subtitle_number_quantity">pag</string>
    <string name="book_type_title">Type:</string>

    <string name="type_book_1">Paper</string>
    <string name="type_book_2">Electronic</string>
    <string name="type_book_3">Audio</string>

    <string name="priority_book_1">High</string>
    <string name="priority_book_2">Medium</string>
    <string name="priority_book_3">Low</string>
    <string name="book_priority_title">Priority</string>

    <string-array name="status_spinner_list">
        <item>@string/title_read_yet</item>
        <item>@string/title_read_now</item>
        <item>@string/title_want_read</item>
    </string-array>

    <string-array name="type_spinner_list">
        <item>@string/type_book_1</item>
        <item>@string/type_book_2</item>
        <item>@string/type_book_3</item>
    </string-array>

    <string-array name="priority_spinner_list">
        <item>@string/priority_book_1</item>
        <item>@string/priority_book_2</item>
        <item>@string/priority_book_3</item>
    </string-array>

    <string-array name="import_spinner_list">
        <item>@string/book_author_title</item>
        <item>@string/book_name_title</item>
    </string-array>

    <string-array name="label_yet_spinner_list">
        <item>Reread</item>
        <item>By paper</item>
        <item>gold</item>
    </string-array>

    <!--    Slider text-->
    <string name="slide1_heading">Hello</string>
    <string name="slide2_heading">Save</string>
    <string name="slide3_heading">Create</string>
    <string name="slide1_description">Welcome to our community. Read, grow, enjoy</string>
    <string name="slide2_description">Convenient, clean, and simple interface. One-click - a new book.
        One swipe is to change the status of the book. Everything is in sight and easy.</string>
    <string name="slide3_description">Easily write books, edit them. If you do not want to fill in all the fields - do not do it, come back later or leave it blank.</string>
    <string name="slide_finish_title">Finish</string>
    <string name="slide_next_title">Next</string>
    <string name="slide_back_title">Back</string>
    <string name="book_description_title">Description</string>
    <string name="book_description_hint">Enter your description here</string>

    <plurals name="fragment_count_books_subtitile">
        <item quantity="one">%d book</item>
        <item quantity="other">%d books</item>
    </plurals>

    <!--    Labels text-->
    <string name="none">None</string>
    <string name="buy_paper">Buy paper</string>
    <string name="reread">Reread</string>

    <string name="bronze">Bronze</string>
    <string name="silver">Silver</string>
    <string name="gold">Gold</string>

    <string name="ok" translatable="false">OK</string>

    <string name="valueExceptionTitle">Value Exception</string>
    <string name="exportedFieldsEmptyFieldsException">Must be active at least one field!</string>
    <string name="exportCriteriaHelpTitle">Quick Guide</string>
    <string name="exportCriteriaHelpText">Use this if you want to export your books data with particular fields.\n\n\nFor example: Choice Date and write 2020 to get only books that have end date - 2020.\n\nNote: if you want to import books with the unknown, undefined date or category, use \'0000\' for date, and \'Without category\' for category.</string>

    <string name="exportedFieldsHelpText">Press on item to activate/deactivate;\nLong press and move up/down to change item position;\n\n\nWill be exported only active fields;\nFields will be exported depending on the order of the elements. From top to bottom;\nAt least one field must be active.\n   </string>

    <!-- For delete alert dialog -->
    <string name="delete_dialog_title">Confirm book delete!</string>
    <string name="delete_dialog_message">You are about to delete all book info. Do you really want to proceed ?</string>
    <string name="yes_button">Yes</string>
    <string name="no_button">No</string>
    <string name="db_exported">DataBase Exported! %s</string>
    <string name="enter_date_hint">Enter Date</string>
    <string name="enter_criteria_hint">Enter criteria</string>
    <string name="send_books_data_extra_subject">Export books data</string>
    <string name="clipboard_data_label">Export books</string>
    <string name="copy_to_clipboard">Copied to clipboard</string>
    <string name="ckeckboxes_empty_exception">Choose one though</string>
    <string name="checkboxes_exception_message">All checkboxes are unchecked</string>
    <string name="empty_field_exeption_title">Empty field</string>
    <string name="criteria_title_empty_exception">%s field are empty</string>
    <string name="incorrect_data_exception_title">Incorrect data</string>
    <string name="criteria_inccorect_value">Value such "%s" is not in books data</string>
    <string name="unknown_value">Unknown</string>
    <string name="unknown_date">Unknown Date</string>
    <string name="undefined_date">Undefined Date</string>
    <string name="without_category_book">Without category</string>
    <string name="empty_description_book">Empty description</string>
    <string name="no_label_book">No label</string>
    <string name="unknown_field">Unknown field %s</string>
    <string name="success_import_from_clipboard">Successful import from clipboard</string>
    <string name="success_split_text">Successful split text</string>
    <string name="error_title">Error</string>
    <string name="swipe_element_text">Element swiped</string>
    <string name="undo_title">Undo</string>
    <string name="date_request_exception_title">Date problem</string>
    <string name="date_start_request_exception_text">Books start date more than end date</string>
    <string name="back">Back</string>
    <string name="date_end_request_exception_text">Books end date less than start date</string>
    <string name="delete_books_alert_dialog_title">What book category you want to delete?</string>
    <string name="all_title">All</string>
    <string name="cancel_title">Cancel</string>
    <string name="export_as_text">Export as text</string>
    <string name="export_as_bd">Export as database</string>
    <string name="import_from_clipboard">Import from clipboard</string>
    <string name="import_from_file">Import from file</string>
    <string name="next">Next</string>
    <string name="export_to_text_status_checkboxes_title">Choose status of which books you want to export</string>
    <string name="exported_fields_title">Exported fields:</string>
    <string name="change">Change</string>
    <string name="export_text_add_criteria">Add Criteria</string>
    <string name="import_title">Import</string>
    <string name="import_get_from_clipboard">Get from clipboard</string>
    <string name="import_items_split_by">Items split by</string>
    <string name="import_enter_you_split_symbol">Enter you split symbol</string>
    <string name="import_split_items">Split items</string>
    <string name="prev_button_text"><![CDATA[<]]></string>
    <string name="next_button_text"><![CDATA[>]]></string>
    <string name="import_split_item_by">Split item by</string>
    <string name="import_add_item">Add item</string>
    <string name="import_to">import to</string>
    <string name="menu_change_sort_format">Change sort format</string>
    <string name="menu_stats">Stats</string>
    <string name="menu_export">Export</string>

    <string name="menu_settings">Settings</string>
    <string name="preferences_read_yet_category_title" translatable="false">@string/title_read_yet</string>
    <string name="preferences_global_category_title">Global</string>

    <string name="preferences_list_item_date_spend">Time spent</string>
    <string name="preferences_list_item_date_full">Full Date</string>
    <string name="preferences_list_date_format_title">Show date as:</string>

    <string name="preferences_list_item_sort_by_category">category</string>
    <string name="preferences_list_item_sort_by_year">year</string>
    <string name="preferences_list_sort_format_title">Sort books by..</string>
    <string name="title_abandoned">Abandoned</string>
    <string name="menu_abandoned_books">Abandoned books</string>
    <string name="empty_result_data_message">None books find</string>
    <string name="empty_result_data_description">Something wrong with your query. There are no books with those statuses or criteria</string>
    <string name="menu_action_export_book_title">Export</string>
    <string name="export_selected_book_preview_title">Preview</string>
    <string name="not_yet_implemented">Opss..., programmer not implemented this :(</string>

    <plurals name="totalBooksExportCount">
        <item quantity="one">Exported %d book</item>
        <item quantity="other">Exported %d books</item>
    </plurals>

    <string-array name="export_criteria_elements">
        <item>@string/book_category_title</item>
        <item>@string/book_end_date_title</item>
    </string-array>


    <string-array name="export_fields_list">
        <item>@string/book_name_title</item>
        <item>@string/book_author_title</item>
        <item>@string/book_end_date_title</item>
        <item>@string/book_pages_title</item>
        <item>@string/book_category_title</item>
        <item>@string/book_description_title</item>
        <item>@string/book_label_title</item>
    </string-array>

    <string-array name="import_popup_menu_elements">
        <item>@string/book_author_title</item>
        <item>@string/book_name_title</item>
        <item>@string/book_description_title</item>
    </string-array>

    <string-array name="preferences_date_format">
        <item>@string/preferences_list_item_date_full</item>
        <item>@string/preferences_list_item_date_spend</item>
    </string-array>

    <string-array name="preferences_sort_format">
        <item>@string/preferences_list_item_sort_by_category</item>
        <item>@string/preferences_list_item_sort_by_year</item>
    </string-array>
</resources>
