<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/delete_book"
        android:icon="@drawable/ic_menu_del"
        android:title="@string/delete_book"
        app:showAsAction="withText"
        />

    <item
        android:id="@+id/menu_date_format"
        android:title="@string/menu_show_date" />

    <item
        android:id="@+id/menu_sort_format"
        android:title="@string/menu_change_sort_format" />

    <item android:title="@string/menu_stats" />

    <item
        android:id="@+id/import_books"
        android:title="@string/import_title" />
    <item
        android:id="@+id/export_books"
        android:title="@string/menu_export" />

</menu>