<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    android:padding="5dp">

    <Button
        android:id="@+id/import_clipboard_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/import_get_from_clipboard"

        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundItem"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/import_clipboard_btn"
        tools:layout_editor_absoluteX="5dp">

        <LinearLayout
            android:id="@+id/import_first_show_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_items_split_by" />

                <EditText
                    android:id="@+id/import_split_symbol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/import_enter_you_split_symbol" />
            </LinearLayout>

            <Button
                android:id="@+id/import_split_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_split_items" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/import_second_hide_stage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/import_splitted_line_prev_btn"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/prev_button_text" />

                <TextView
                    android:id="@+id/import_splitted_line_view"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textAlignment="center" />

                <Button
                    android:id="@+id/import_splitted_line_next_btn"
                    android:layout_width="60dp"
                    android:layout_height="wrap_content"
                    android:text="@string/next_button_text" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_split_item_by" />

                <EditText
                    android:id="@+id/import_split_splitted_symbol"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:hint="@string/import_enter_you_split_symbol" />
            </LinearLayout>

            <Button
                android:id="@+id/import_split_splitted_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/import_split_items" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/import_thirty_show_state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/import_add_item"
                    android:textAlignment="textEnd" />

                <Button
                    android:id="@+id/import_add_item_button"
                    android:layout_width="60dp"
                    android:layout_height="60dp"
                    android:foreground="@android:drawable/ic_input_add" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/import_appropriate_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/import_to" />


                <Spinner
                    android:id="@+id/import_status_spinner"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:entries="@array/status_spinner_list" />


            </LinearLayout>
        </LinearLayout>

        <Button
            android:id="@+id/import_finish_btn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/import_title" />


    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>