<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundFont"
    android:orientation="vertical"
    android:padding="1dp"
    tools:context=".BookFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundItem"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_book" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book_name_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/book_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:hint="@string/book_name_hint"
            android:textColorHint="@color/bookPaper"
            android:textCursorDrawable="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundItem"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_author" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book_author_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/book_author"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:hint="@string/book_author_hint"
            android:textColorHint="@color/bookPaper"
            android:textCursorDrawable="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundItem"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_page" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"

            android:text="@string/book_pages_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <EditText
            android:id="@+id/book_pages"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:cursorVisible="true"
            android:hint="@string/book_pages_hint"
            android:textColorHint="@color/bookPaper"
            android:textCursorDrawable="@null" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:background="@color/backgroundItem"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_category" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:baselineAligned="false"
            android:text="@string/book_category_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <AutoCompleteTextView
            android:id="@+id/book_category"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:hint="@string/book_category_hint"
            android:theme="@style/Autocomplete" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundItem"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:src="@drawable/ic_status" />

        <TextView
            android:layout_width="80dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/book_status_title"
            android:textAlignment="center"
            android:textSize="18sp" />

        <Spinner
            android:id="@+id/book_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:entries="@array/spinner_list"
            android:popupBackground="@color/backgroundItem" />

    </LinearLayout>


</LinearLayout>