<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundItem"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="0.6"
            android:gravity="center"
            android:text="Choice books of which status you want to export"
            android:textAlignment="center" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.4">

            <CheckBox
                android:id="@+id/yet_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_circle"
                android:padding="5dp"
                android:text="@string/title_read_yet"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <CheckBox
                android:id="@+id/now_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_circle"
                android:padding="5dp"
                android:text="@string/title_read_now"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/yet_checkbox" />

            <CheckBox
                android:id="@+id/want_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:button="@drawable/checkbox_circle"
                android:padding="5dp"
                android:text="@string/title_want_read"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/now_checkbox" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/backgroundItem"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent">

        <ImageButton
            android:id="@+id/export_copy_to_clipboard_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/backgroundItemLight"
            android:src="@drawable/ic_clipboard" />

        <ImageButton
            android:id="@+id/export_send_btn"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/backgroundItemLight"
            android:src="@drawable/ic_send" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>